@@ -1,0 +1,1 @@
+IDLE Settings Cancel button now cancels pending changes
